[package]
name = "simetry"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/adnanademovic/simetry"
description = "Placeholder for library for interfacing with telemetry of various racing and driving sims"
version = "0.0.1"

[dependencies]
anyhow = "1.0.68"
byteorder = "1.4.3"
once_cell = "1.17.0"
yaml-rust = "0.4.5"
bitmask = "0.5.0"
itertools = "0.10.5"

[dependencies.tokio]
version = "1.24.1"
features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
]

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]
