[package]
name = "simetry"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/adnanademovic/simetry"
description = "Placeholder for library for interfacing with telemetry of various racing and driving sims"
version = "0.0.1"

[dependencies]
